--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "sequelize": "^5.21.4"
+    "sequelize": "^5.21.4",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
