--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.2",
     "multer": "^1.4.2",
     "sequelize": "^5.21.4",
     "yup": "^0.28.1"
