--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.3",
     "sequelize": "^5.21.4",
     "yup": "^0.28.1"
   },
